disable no-wrap on dataTables css. Fixes #16

--- a/newsgac/static/css/style.css
+++ b/newsgac/static/css/style.css
@@ -127,7 +127,7 @@ table.dataTable th,
 table.dataTable td {
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  /*white-space: nowrap;*/
 }
 
 tfoot input {
